# st2cc

./: .gitignore  .gitignore_list.sh  CHANGELOG  README.md  build.sh  pyproject.toml
cython/: build.sh
examples/: example-cfg.json  example-cfg.toml  example-io.csv  example-output-test.txt  example-test.csv  example.c  example.st  example.toml  example_DST.c  example_DST_NEW.c  record.st  recursion.c  recursion.st  recursion.toml
st2c/: __main__.py  ast.py  gen.py  int.py  lex.py  par.py  sem.py  sym.py  tok.py
st2cc/: __main__.py  adr.py  asf.py  ast.py  gen.py  int.py  lec.py  lex.py  opt.py  pah.py  par.py  sem.py  sym.py
tests/: test_lex.py
