# DEPENDENCIES
#   pip install build hatchling twine

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "st2cc"
version = "0.0.1"
description = "Structured Text (ST) to C Compiler and Interpreter, written in Python"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Andreas Schwenk", email = "contact@compiler-construction.com" },
]
maintainers = [
    { name = "Andreas Schwenk", email = "contact@compiler-construction.com" },
]
license = { file = "LICENSE" }
keywords = ["structured text", "compiler", "C"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = []
include = ["st2cc/*.py"]

[project.scripts]
st2cc = "st2cc.__main__:main"

[project.urls]
Homepage = "https://st2cc.org"
Repository = "https://github.com/andreas-schwenk/st2cc"

[tool.hatch.build]
exclude = ["img/", "build/", "examples/", "build-st2cc.py", "TODO.txt"]
